fix: increased contrast of primary border color in dark mode

--- a/src/themes/slate/theme.css
+++ b/src/themes/slate/theme.css
@@ -171,22 +171,22 @@
 			[data-rs-theme="slate"][data-rs-color-mode="dark"],[data-rs-theme*=" slate "][data-rs-color-mode="dark"] {
 					--rs-color-background-primary: oklch(0.5498 0.192 262.67);
 --rs-color-background-primary-faded: oklch(0.25 0.0384 262.67);
---rs-color-border-primary: oklch(0.6298 0.192 262.67);
+--rs-color-border-primary: oklch(0.6498 0.192 262.67);
 --rs-color-border-primary-faded: oklch(0.35 0.0384 262.67);
 --rs-color-foreground-primary: oklch(0.75 0.204 262.67);
 --rs-color-background-critical: oklch(0.5874 0.176 26.97);
 --rs-color-background-critical-faded: oklch(0.25 0.0352 26.97);
---rs-color-border-critical: oklch(0.6674 0.176 26.97);
+--rs-color-border-critical: oklch(0.6874 0.176 26.97);
 --rs-color-border-critical-faded: oklch(0.35 0.0352 26.97);
 --rs-color-foreground-critical: oklch(0.75 0.187 26.97);
 --rs-color-background-warning: oklch(0.8036 0.16 80);
 --rs-color-background-warning-faded: oklch(0.25 0.032 80);
---rs-color-border-warning: oklch(0.8836 0.16 80);
+--rs-color-border-warning: oklch(0.9036 0.16 80);
 --rs-color-border-warning-faded: oklch(0.35 0.032 80);
 --rs-color-foreground-warning: oklch(0.75 0.17 80);
 --rs-color-background-positive: oklch(0.5162 0.104 153.78);
 --rs-color-background-positive-faded: oklch(0.25 0.0208 153.78);
---rs-color-border-positive: oklch(0.5962 0.104 153.78);
+--rs-color-border-positive: oklch(0.6162 0.104 153.78);
 --rs-color-border-positive-faded: oklch(0.35 0.0208 153.78);
 --rs-color-foreground-positive: oklch(0.75 0.1105 153.78);
 --rs-color-background-neutral: oklch(0.36 0.008 262.67);
